# club-backend-rs

./: .env  Cargo.toml
migrations/2020-07-25-181328_create_users/: down.sql  up.sql
src/: auth.rs  auth_handler.rs  errors.rs  main.rs  models.rs  schema.rs  user_handler.rs
