[package]
name = "club_backend"
version = "0.1.0"
authors = ["Hunter Jarrell <hjarrell555@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.1"
diesel = { version = "1.4", features = ["postgres", "sqlite", "r2d2"] }
dotenv = "0.15"
env_logger = "0.7"
log = "0.4"
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"]}
serde_json  = "1.0"
